         resize the outer window, which might result in a smaller window overall.
         or something like that. guys, send me a patch.
WISH: coloured pastebin
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts
TODO: perl-shell-window? perl-unix-socket?

TODO:        - upgrade to libev-4.00.

	- new on_tt_paste perl hook and tt_paste perl binding (Emanuele Giaquinta).
	- fix utmpx detection on upcoming FreeBSD 9.
	- Use COMPOUND_TEXT encoding for WM_NAME/WM_ICON_NAME value when it
	  is not fully convertible to STRING (patch by James Cloos).
        - fix a buffer overflow that would cause wrong key sequences to
          be generated for numpad keys (introduced in 9.05).
        - fix definition of sgr0 to work around limitations in luit.
	- extend ISO 14755 5.4 mode to also print the font name of the
	  characters other than first one in the selected cell
	  (Emanuele Giaquinta).
	- new iso14755 option to disable ISO 14755 at runtime
          (Emanuele Giaquinta).
	- new on_bell perl hook (Emanuele Giaquinta).
	- make sure pagewise scrolling scrolls at least one line
          (found by Mikachu).
	- remove deprecated OSC 18 / 19 and make OSC 17 / 19 apply to
	  highlightColor / highlightTextColor (Emanuele Giaquinta).
	- add highlightTextColor resource to change the foreground colour of
	  highlighted characters (Emanuele Giaquinta).
	- make highlightColor apply also to selected cells with reverse video
	  but not to non selected cells with reverse video (Emanuele Giaquinta).
	- remove colorRV resource (it was enabled only with frills off).
	- fix numlock handling, the most longstanding bug to date (Emanuele Giaquinta).
	- searchable-scrollback no longer ignores the first line
	  (Emanuele Giaquinta).
        - reduce the number of custom bits to 4, to make room
          for 256 colours.
	- add support for 256 colors.